--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .top-bar {
-	background: transparentize(white, .7) !important;
+	background: transparentize(white, 0) !important;
 }
 
 .fixed {
