--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,12 +1,15 @@
 <p id="notice"><%= notice %></p>
 <div class="item-container">
-	  <div class="display-pic"><%= image_tag (@item.pic)%>
-	  <div class="show-title"><%= @item.title %></div><div class='show-price'>$<%= @item.price %></div></div>
-	<div class='show-detail'>
-	  <%= @item.details %>
+	<%= image_tag (@item.pic)%>
+		
+	<div class='show-info'>
+	  <div class="show-title"><%= @item.title %></div>
+	  <div class='show-price'>$<%= @item.price %></div>
+	  <div class="show-details"><%= @item.details %></div>
 	</div>
 
+	<div class="show-creator">Creator: <b><%= @item.artist %></b></div>
+	<div class="follow"><%= link_to 'Follow this Artist' %></div>
 </div>
 
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+	<div class="back-link">&larr; <%= link_to 'Back to Browsing', items_path %></div>
