styled user profile page, added follow functionality, started adding map and location functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -344,7 +344,8 @@ input[type='submit'] {
 	font-weight: 300;
 	
 	a:hover {
-		color: white;
+		color: $dkblue;
 		background: transparent;
+		text-shadow: 0 0 1px $dkgray;
 	}
 }
