--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -33,6 +33,7 @@ $dkblue: #457399;
 
 .user-email {
 	position: relative;
+	float: left;
 	margin-bottom: 10px;
 
 	a:hover {
@@ -41,6 +42,12 @@ $dkblue: #457399;
 		color: $dkblue;
 	}
 
+}
+
+.interests {
+	float: left;
+	width: 100px;
+	font-size: 10pt;
 }
 
 .other_user {
@@ -65,6 +72,14 @@ $dkblue: #457399;
 	margin: 20px;
 	height: 225px;
 	top: 0px !important;
+
+	img {
+		height: 120px;
+		width: 120px;
+		float: left;
+		padding-right: 5px;
+		padding-bottom: 5px;
+	}
 }
 
 .stats {
@@ -91,8 +106,13 @@ $dkblue: #457399;
 			}
 		}
 	}
-
 }
+
+	#user_avatar {
+		position: absolute;
+		z-index: 10;
+	}
+
 	#followers a {
 		margin: 0 25px;
 	}
@@ -126,12 +146,13 @@ $dkblue: #457399;
 }
 
 .following-updates {
+	padding: 20px;
 	width: 600px;
 	max-width: 50%;
-	height: 80vh;
+	height: 553px;
 	margin: 20px 20px 20px 0;
 	position: absolute;
-	right: 0px;
+	left: 360px;
 	background: white;
 	border: 1px solid black;
 	overflow: hidden;
