--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="form">
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -26,11 +26,12 @@
   <%= f.password_field :current_password %></div>
 
   <div><%= f.label :avatar %><br />
+  <%= image_tag @user.avatar.url(:medium) %>
   <%= f.file_field :avatar %></div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
-
+</div>
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
