--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,3 @@
-<%= form_for(current_user.relationships.build(followed_id: @user.id)) do |f| %>
-  <div><%= f.hidden_field :followed_id %></div>
+<%= form_for(current_user.relationships.build(followed_id: @user.id)) do |f| %><div><%= f.hidden_field :followed_id %></div>
   <%= f.submit "Follow", class: "follow-button" %>
 <% end %>
