--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container" ng-controller="UserCtrl">
 	<div class="user-wallpaper">
 		<% if flash[:alert] %>
-		    <div class="notice"><%= flash[:alert] %> <%= @user.email %></div>
+		    <div class="notice"><%= flash[:alert] %> <%= @user.name %></div>
 	 	<% end %>
 
 		<% if current_user == @user %>
