Tweaking user follow view

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -69,10 +69,11 @@ $dkblue: #457399;
 		height: 120px;
 		width: 120px;
 		float: left;
-		padding-right: 10px;
-		padding-bottom: 5px;
+		margin-right: 10px;
+		margin-bottom: 5px;
 		overflow: hidden;
-		border-radius: 300px !important;
+		border-radius: 100px !important;
+		border: 1px solid $dkgray;
 	}
 }
 
@@ -146,6 +147,8 @@ $dkblue: #457399;
 	width: 180px !important;
 }
 
+//following users updates
+
 .following-updates {
 	padding: 20px;
 	width: 600px;
@@ -157,5 +160,26 @@ $dkblue: #457399;
 	background: white;
 	border: 1px solid black;
 	overflow: hidden;
+}
+
+.followed-user {
+	margin-bottom: 10px;
+	a:hover {
+		background: transparent;
+		text-shadow: 0 0 1px $dkgray;
+		color: $dkblue;
+	}
+}
+
+.follow-icon {
+	display: inline;
+
+
+	img {
+		border: 1px solid $dkgray;
+		border-radius: 25px;
+		width: 50px;
+		height: 50px !important;
+	}
 }
 
