--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -29,15 +29,15 @@ body {
 .store-container {
 	position: relative;
 	margin-top: 30px;
-	max-width: 960px;
+	width: 100%;
 	margin: 0 auto;
 }
 
 .item {
-	max-width: 24%;
+	max-width: 25%;
 	min-width: 200px;
 	padding: 0 !important;
-	box-shadow: 0 0 1px .5px;
+	margin: 0 !important;
 	font-family: 'Alegreya Sans', sans-serif;
 	font-weight: 300;
 	cursor: pointer;
