Almost got user/item associations working, with create and follow and everything.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,11 @@ $midblue: #5a8db6;
 $dkblue: #457399;
 $col-width: 12vw;
 
+
+.breadcrumbs {
+	margin-bottom: -36px !important;
+}
+
 .notice {
 	max-width: 450px;
 	// border: 1px solid black;
