--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -18,24 +18,23 @@ body {
 
 .bg-img {
 	position: absolute;
+	background-size: cover;
 	filter: blur(10px);
 	-webkit-filter: blur(10px);
 	-moz-filter: blur(10px);
 	-o-filter: blur(10px);
 	-ms-filter: blur(10px);
-	bottom: 0px;
 }
 
 .store-container {
 	position: relative;
-	margin-top: 30px;
+	margin-top: 0px;
 	width: 100%;
 	margin: 0 auto;
 }
 
 .item {
-	max-width: 25%;
-	min-width: 200px;
+	width: 320px;
 	padding: 0 !important;
 	margin: 0 !important;
 	font-family: 'Alegreya Sans', sans-serif;
@@ -47,28 +46,35 @@ body {
 		position: absolute;
 		opacity: .5;
 		bottom: 0px;
-		left: -1px;
+		left: 0px;
 		background: black;
 		display: none;
-		padding: 4px;
-		width: 100.5%;
-		border-bottom-left-radius: 5px;
-		border-bottom-right-radius: 5px;
+		width: 100%;
+		height: 100%;
+		text-align: center;
 		font-family: 'Alegreya Sans SC', sans-serif;
 		font-weight: 300;
 		font-size: 14pt;
 
 		a {
+			position: relative;
+			top: 30%;
+			float: left;
+			color: white;
+			width: 100%;
+			text-align: center;
+		}
+
+		div {
+			position: relative;
+			float: right;
+			bottom: -80%;
+			font-size: 10pt;
+			width: 100%;
 			color: white;
 		}
 	}
 
-	.artist {
-		float: right;
-		font-size: 10pt;
-		max-width: 50%;
-		color: white;
-	}
 }
 
 
@@ -135,14 +141,28 @@ body {
 	width: 25%;
 	padding-right: 10px;
 	font-size: 10pt;
+
+	a {
+		&:hover {
+			background: transparent;
+			color: $dkblue;
+		}
+	}
 }
 
 .follow {
-	position: absolute;
-	right: -10px;
+	position: relative;
+	margin: 5px;
 	bottom: 5px;
-	width: 50%;
-	float: right;
+	left: 50%;
+	width: 120px;
+	font-size: 11pt;
+	line-height: 10pt;
+	font-family: 'Alegreya Sans SC', sans-serif;
+	font-weight: 300;
+	border: 1px solid $dkgray;
+	cursor: pointer;
+	
 
 	a:hover {
 		color: $dkblue;
