--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,15 +8,16 @@
 <%= render 'layouts/breadcrumbs' %>
 
 <div class = "container">
-
   <!-- <h1>Listing items</h1> -->
-      <div id="masonry-container" class="store-container transitions-enabled infinite-scroll">
+      <div id="masonry-container" class="store-container infinite-scroll">
         <% @items.each do |item| %>
-          <div class="item box small-2 large-4 columns">
-            <%= image_tag item.pic %>
-            <div class="art-label">
-              <%= link_to item.title, item %>
-              <div class="artist">by <%= item.artist %></div>
+          <%= link_to item do %>
+            <div class="item box small-2 large-4 columns">
+              <%= image_tag item.pic %>
+              <div class="art-label">
+                <%= item.title %>
+                <div class="artist">by <%= item.artist %></div>
+              <% end %>
             </div>
           </div>
         <% end %>
