--- a/app/views/users/_following.html.erb
+++ b/app/views/users/_following.html.erb
@@ -1,8 +1,10 @@
 <div class="following-updates">
 	<% @user.followed_users.each do |user| %>
-		<div class="followed-user"><div class="follow-icon"><%= image_tag user.avatar %></div>
-		<%= link_to user.name, user %><% unless user.category == nil %>, interested in <%= user.category %><br>
+		<div class="followed-user">
+			<div class="follow-icon"><%= image_tag user.avatar %></div>
+			<%= link_to user.name, user %>
+			<% unless user.category == nil %>, interested in <%= user.category %><br>
+			<% end %>
 		</div>
-		<% end %>
 	<% end %>
 </div>
