--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 		<% if current_user == @user %>
 			<%= render 'profile' %>
 			<%= render 'following' %>
+			<%= render 'gallery' %>
 		<% else %>
 			<%= render 'other_user' %>
 		<% end %>
