--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.1/angular.min.js"></script>
     
 
-    <title><%= content_for?(:title) ? yield(:title) : "GalleryEighteen" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "HighSchoolArt" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
