--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -78,6 +78,23 @@ body {
 }
 
 
+.item-thumb {
+	@extend .item;
+	max-width: 50%;
+	max-height: 50%;
+	overflow: hidden;
+
+	.art-label a {
+		top: 40%;
+
+		img {
+			max-width: 50%;
+			max-height: 50%;
+			bottom: 0px;
+		}
+	}
+}
+
 .item-container {
 	position: relative;
 	top: 10px !important;
