--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
 	    <% if user_signed_in? %>
 	      <li><%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %></li>
 
-		<li><%= link_to 'My Cart', '#' %></li>
+		<li><%= link_to 'Upload New Art', new_item_path %></li>
 
 	    <li><%= link_to 'My Account', user_path(current_user) %></li>
 	 
