--- a/app/views/users/_gallery.html.erb
+++ b/app/views/users/_gallery.html.erb
@@ -1,6 +1,12 @@
 <div class="user-gallery">
 	<% @user.items.each do |item| %>
-		<%= image_tag item.pic %>
-		<%= link_to item.title, item %>
-	<% end %>
+          <%= link_to item do %>
+            <div class="item-thumb box small-2 large-4 columns">
+              <%= image_tag item.pic %>
+              <div class="art-label">
+                <%= item.title %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
 </div>
