--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -33,6 +33,66 @@ body {
 	margin: 0 auto;
 }
 
+.item-thumb {
+	padding: 0 !important;
+	margin: 5px;
+	width: 200px;
+	font-family: 'Alegreya Sans', sans-serif;
+	font-weight: 300;
+	cursor: pointer;
+	border-radius: 0px !important;
+	max-width: 45%;
+	max-height: 45%;
+	overflow: hidden;
+	border-radius: 5px !important;
+
+	.art-label {
+		position: absolute;
+		opacity: .5;
+		bottom: 0px;
+		left: 0px;
+		background: black;
+		display: none;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		font-family: 'Alegreya Sans SC', sans-serif;
+		font-weight: 300;
+		font-size: 14pt;
+
+		a {
+			position: relative;
+			top: 40%;
+			float: left;
+			width: 100%;
+			text-align: center;
+			color: $dkblue !important;
+			background: transparent !important;
+			text-shadow: 0 0 1px $dkgray;
+
+			img {
+				max-width: 45%;
+				max-height: 50%;
+				bottom: 0px;
+			}
+
+			&:hover {
+				color: white !important;
+				text-shadow: 0 0 0 $dkgray !important;
+			}
+		}
+
+		div {
+			position: relative;
+			float: right;
+			bottom: -80%;
+			font-size: 10pt;
+			width: 100%;
+			color: white;
+		}
+	}
+}
+
 .item {
 	width: 320px;
 	padding: 0 !important;
@@ -60,9 +120,16 @@ body {
 			position: relative;
 			top: 30%;
 			float: left;
-			color: white;
 			width: 100%;
 			text-align: center;
+			color: $dkblue !important;
+			background: transparent !important;
+			text-shadow: 0 0 1px $dkgray;
+
+			&:hover {
+				color: white !important;
+				text-shadow: 0 0 0 $dkgray !important;
+			}
 		}
 
 		div {
@@ -75,24 +142,6 @@ body {
 		}
 	}
 
-}
-
-
-.item-thumb {
-	@extend .item;
-	max-width: 50%;
-	max-height: 50%;
-	overflow: hidden;
-
-	.art-label a {
-		top: 40%;
-
-		img {
-			max-width: 50%;
-			max-height: 50%;
-			bottom: 0px;
-		}
-	}
 }
 
 .item-container {
@@ -112,7 +161,7 @@ body {
 	
 	img {
 		margin: 0;
-		position: relative;
+		float: left;
 		width: 50%;
 		margin-right: -3px;
 		border-right: 1px solid $ltgray;
