--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -8,7 +8,7 @@ $dkblue: #457399;
 	width: 320px;
 	height: 320px;
 	position: absolute;
-	border: 1px solid $dkgray;
+	background: #CCC;
 	top: 280px;
 	left: 0px;
 	margin: 20px;
