--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -55,18 +55,23 @@ $dkblue: #457399;
 	line-height: 20px;
 	font-size: 12pt;
 	font-weight: 300;
-	height: 230px;
+	height: 270px;
 
-	img {
-		position: relative;
+	.avatar {
 		height: 120px;
 		width: 120px;
 		float: left;
+		position: relative;
 		margin-right: 10px;
 		margin-bottom: 5px;
 		overflow: hidden;
 		border-radius: 100px !important;
 		border: 1px solid $dkgray;
+
+		img {
+			min-width: 120px;
+			min-height: 120px;
+		}
 	}
 }
 
@@ -77,6 +82,19 @@ $dkblue: #457399;
 	margin: 20px;
 	height: 225px;
 	top: 0px !important;
+	border: none;
+
+	img {
+		height: 120px;
+		width: 120px;
+		float: left;
+		position: relative;
+		margin-right: 10px;
+		margin-bottom: 5px;
+		overflow: hidden;
+		border-radius: 100px !important;
+		border: 1px solid $dkgray;
+	}
 }
 
 .stats {
@@ -121,14 +139,15 @@ $dkblue: #457399;
 	position: relative;
 	font-family: 'Over the Rainbow', cursive;
 	transition: 200ms;
-	bottom: -70px;
-	left: -54px;
+	bottom: -145px;
 	line-height: 12px;
-	display: block;
-	margin: 0 auto;
+	left: -32px;
+	display: inline-block;
+	margin: 0 auto !important;
 	padding: 0 !important;
 	border: 1px solid $dkgray;
 	width: 80px;
+	text-align: center;
 	font-size: 12pt;
 	height: 30px;
 	color: white;
@@ -138,41 +157,6 @@ $dkblue: #457399;
 	position: relative;
 	margin: 10px 0 20px 0 !important;
 	width: 180px !important;
-}
-
-//following users updates
-
-.following-updates {
-	position: relative;
-	padding: 20px;
-	width: 400px;
-	max-width: 30%;
-	height: 553px;
-	margin: 20px 20px 20px 0;
-	float: left;
-	background: white;
-	border: 1px solid $dkgray;
-	overflow: hidden;
-}
-
-.followed-user {
-	margin-bottom: 10px;
-	a:hover {
-		background: transparent;
-		text-shadow: 0 0 1px $dkgray;
-		color: $dkblue;
-	}
-}
-
-.follow-icon {
-	display: inline;
-
-	img {
-		border: 1px solid $dkgray;
-		border-radius: 25px;
-		width: 50px;
-		height: 50px !important;
-	}
 }
 
 
