--- a/app/views/users/_following.html.erb
+++ b/app/views/users/_following.html.erb
@@ -1,7 +1,8 @@
 <div class="following-updates">
+	<h4>Updates</h4>
 	<% @user.followed_users.each do |user| %>
 		<div class="followed-user">
-			<div class="follow-icon"><%= image_tag user.avatar %></div>
+			<div class="follow-icon"><%= image_tag user.pic %></div>
 			<%= link_to user.name, user %>
 			<% unless user.category == nil %>, interested in <%= user.category %><br>
 			<% end %>
