--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,3 @@
-<%= form_for(current_user.relationships.find_by(followed_id: @user.id),
-             html: { method: :delete }) do |f| %>
-  <%= f.submit "Unfollow", class: "follow-button" %>
+<%= form_for(current_user.relationships.find_by(followed_id: @user.id), html: { method: :delete }) do |f| %>
+	<%= f.submit "Unfollow", class: "follow-button" %>
 <% end %>
