tweaked copy on "Artists You Follow" in profile page

--- a/app/assets/stylesheets/following.css.scss
+++ b/app/assets/stylesheets/following.css.scss
@@ -8,9 +8,9 @@ $dkblue: #457399;
 
 .following-updates {
 	position: relative;
-	//padding: 20px;
 	width: 400px;
 	max-width: 30%;
+	min-width: 330px;
 	height: 553px;
 	margin: 20px 20px 20px 0;
 	float: left;
