--- a/app/views/users/_following.html.erb
+++ b/app/views/users/_following.html.erb
@@ -1,5 +1,5 @@
 <div class="following-updates">
-	<h4>Updates</h4>
+	<h4>Artists You Follow</h4>
 	<% @user.followed_users.each do |user| %>
 		<div class="followed-user">
 			<div class="follow-icon"><%= image_tag user.pic %></div>
