--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,15 @@
-<!-- <ul class="side-nav">
-  <li><a href="#">Link 1</a></li>
-  <li><a href="#">Link 2</a></li>
-  <li><a href="#">Link 3</a></li>
-  <li><a href="#">Link 4</a></li>
-</ul>
- -->
-
 <div class = "container">
-  <!-- <h1>Listing items</h1> -->
+  <!-- <h1>Listing users</h1> -->
       <div id="masonry-container" class="store-container infinite-scroll">
-        <% @items.each do |item| %>
-          <%= link_to item do %>
+        <% @users.each do |user| %>
+          <%= link_to user do %>
             <div class="item box small-2 large-4 columns">
-              <%= image_tag item.pic %>
+              <%= image_tag user.pic %>
               <div class="art-label">
-                <%= item.title %>
+                <%= user.name %>
                 <div class="artist">by
-                  <% if item.user != nil %>
-                    <%= item.user.name %>
+                  <% if user.name != nil %>
+                    <%= user.name %>
                   <% else %>
                     Anonymous
                   <% end %>
