--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New item</h1>
+<div class="wallpaper-login">
+<div class="container">
+	<div class="form">
+		<div class="title">Upload New Work</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', items_path %>
+	</div>
+</div>
+</div>
+
+<div class="back-link">&larr; <%= link_to 'Back to Browsing', items_path %></div>
