Tried to implement angular... doesn't work with masonryJS
Also added SOME paperclip functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 @import "compass/css3";
 @import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300,400,500);
+@import url(http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500);
 
 $dkgray: #bbbbbb;
 $ltgray: #d5d5d5;
