--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -92,7 +92,7 @@ $formcolor:transparentize(white, .4);
 	font-family: 'Alegreya Sans SC', sans-serif;
 
 	input {
-		font-family: 'Alegreya Sans SC', sans-serif;
+		font-family: 'Alegreya Sans', sans-serif;
 	}
 	
 
