--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="highschootart">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body ng-controller="itemsController">
 	<%= render 'layouts/header' %>
     <%= yield %>
     <%= javascript_include_tag "application" %>
